project semi-final

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Profile Sharing made easy with NFC Cards"
+      content="QR Based Restaurent Menu"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/tapxtream.png" />
     <!--
